syntax = "proto3";
option java_multiple_files = true;
option java_package = "protos";


package proto;




service UserService {
  rpc AddUser (UserObj) returns (UserObj);
  rpc GetUser (Username) returns (UserObj);

}

message UserObj {
  int32 id = 1;
  string username = 2;
  string password = 3;
  string email=4;

}

message Username {
  string username= 1;
}


